# SkyRocket

./: .gitignore  README.md
CAD/: Battery.SLDASM  Box.SLDPRT  Cache-A.SLDPRT  Cache-B.SLDPRT  Cache-C.SLDPRT  Cell 26650.SLDPRT  Cell Cover.SLDPRT  Cell Holder.SLDPRT  Lidar.SLDPRT  MD10C_R3.step  Main-Plate.SLDPRT  Mecanum Wheel V1.SLDASM  Mecanum Wheel V2.SLDASM  Moteur-Wheel-Support-V2.SLDPRT  Moteur-Wheel-Support-V2.STEP  Moteur-Wheel-Support.SLDPRT  PCB_CDFR.SLDASM  Sub-Plate-Acier.SLDPRT  Sub-Plate.SLDPRT  Support MD10.SLDPRT  Support-Balise.SLDPRT  Support-Moteur-Chassis.SLDPRT  Support-PCB.SLDPRT  Support-Tube.SLDPRT  Top Plate New Steel.SLDPRT  Top Plate New.SLDPRT  Tube-Alu.SLDPRT  moteur.SLDPRT
Code/Qt/: CMakeLists.txt
Code/Qt/include/: beaconcontrolwidget.hpp  beaconwidget.hpp  connectionwidget.hpp  ledcontrolwidget.hpp  magnetometerwidget.hpp  mainwindow.hpp  robotcontrolwidget.hpp
Code/Qt/resources/: resources.qrc
Code/Qt/src/: beaconcontrolwidget.cpp  beaconwidget.cpp  connectionwidget.cpp  ledcontrolwidget.cpp  magnetometerwidget.cpp  main.cpp  mainwindow.cpp  robotcontrolwidget.cpp
Code/cdfr_main/: platformio.ini
Code/cdfr_main/include/: Emergency.hpp  LED.hpp  Mecanum.hpp
Code/cdfr_main/src/: Hedgehog.cpp  LED.cpp  lidar.cpp  (+3 more)
Code/main/: main.ino
Hedgehog/: readme.md
Lidar/: readme.md
Lidar/Code/: lidar_skyrocket.ino  lidar_skyrocket_processing.ino  lidar_skyrocket_processing_angle.ino  lidar_skyrocket_simplified.ino  processing_lidar.pde
PCB/: readme.md
PCB/KSante_PCB/: image.md  readme.md
PCB/SkyRocket_PCB/: image.md  readme.md
(+42 files in other folders)
